# ibexa-recruitment

./: Makefile  README.md  pyproject.toml
src/discount_calculator/: __init__.py  calculator.py  cart_item.py  discount_policy.py  discounts.py  exceptions.py  money.py  percentage.py  selection.py
tests/: conftest.py  test_calculator.py  test_cart_item.py  test_discount_policy.py  test_discounts.py  test_money.py  test_percentage.py  test_selection.py  test_smoke.py
