[project]
name = "discount-calculator"
version = "0.1.0"
description = "A small DDD-flavoured discount calculator for shopping carts."
authors = [{ name = "Ibexa Recruitment" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = []

[tool.poetry]
package-mode = true
packages = [{ include = "discount_calculator", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
